Resolves: tdf#110429 width of page number wider than traditional width

since...

commit c80ac2ba4a6486e6161e17f9118ba1563b7fc00e
Date:   Fri Nov 11 18:16:52 2016 +0100

    Avoid -fsanitize=signed-integer-overflow

Change-Id: I2ec85e854ee1547d55b43b8540c357297d3b6cce
Reviewed-on: https://gerrit.libreoffice.org/67068
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>